--- a/2-checkout/package.json
+++ b/2-checkout/package.json
@@ -15,13 +15,16 @@
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.4",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.9.0",
     "uuid": "^8.3.2",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2"
